WebDeploy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag", "name":"pharm-sim:staging", "namespace":"excaperoom-ohtu-s2026"},"fieldPath":"spec.template.spec.containers[?(@.name==\"pharm-sim\")].image","pause":"false"}]
  name: pharm-sim-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pharm-sim
  template:
    metadata:
      labels:
        app: pharm-sim
    spec:
      containers:
        - name: pharm-sim
          image: dominicnygard/pharm-sim
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "50Mi"
              cpu: "50m"
