WebDeploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharma-sim-svc
spec:
  selector:
    app: pharma-sim
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
