WebDeploy/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pharma-sim-route
  namespace: excaperoom-ohtu-s2026
  labels:
    app: pharma-sim
    type: external
spec:
  host: excaperoom-ohtu-s2026-pharma-sim.apps.okd-cs-test-0.k8s.cs.helsinki.fi
  to:
    kind: Service
    name: pharma-sim-svc
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
